INCLUDE_DIRECTORIES (lib)
ADD_EXECUTABLE (main main.c)
ADD_LIBRARY (libtest STATIC lib/lib_operation.c lib/lib_operation.h)
TARGET_LINK_LIBRARIES (main PUBLIC libtest)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")
SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg")

